--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
   <div id="static">Image Enhancement Using a GAN</div>
   <div id="latestproj" class="collapse">
   You know how in that silly show CSI the officers can digitally enhanced any picture? It used to be fiction but thanks to the magic of Generative Adversarial Networks that's no longer the case. I joined a couple of data scientists to tackle the problem outlined <a href="http://ai-on.org/projects/photorealistic-3d-scene-postprocessing.html">here</a>. We used the 32-bit version of <a href="http://deeplearning.net/software/theano/install_ubuntu.html">Theano</a> with <a href="https://github.com/sklearn-theano/sklearn-theano">sklearn-theano</a> as a wrapper.
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#current-project">Current Project</button>
  </div>
-
+</div>
  
 <div class="container">
    <h2>Skills</h2>
