--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
 
-<nav>
+		<div class="centered">
+		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="/blog">Blog</a></li>
@@ -19,9 +20,10 @@
         		<li><a href="/contact">Contact</a></li>
     		</ul>
 		</nav>
+		</div>
 
 
-<div class="container">
+<div class="centered">
   <h2>Simple Collapsible</h2>
   <p>Click on the button to toggle between showing and hiding content.</p>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Austin Capobianco</button>
@@ -43,7 +45,7 @@
  </div>
 </div>
  
-<div class="container">
+<div class="centered">
    <h2>Skills</h2>
 
 <div class="container">
