--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 
-		<div class="centered">
-		<nav>
+		<div class="container">
+		<nav style="align:center">
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="/blog">Blog</a></li>
@@ -23,8 +23,10 @@
 		</div>
 
 
-<div class="centered">
-  <h2>Simple Collapsible</h2>
+<div class="container">
+  <h2 style="algin:center">Simple Collapsible</h2>
+
+<div style="align:center">
   <p>Click on the button to toggle between showing and hiding content.</p>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Austin Capobianco</button>
   <div id="static">The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</div>
@@ -44,10 +46,10 @@
   You know how in that silly show CSI the officers can digitally enhanced any picture? It used to be fiction but thanks to the magic of Generative Adversarial Networks that's no longer the case. I joined a couple of data scientists to tackle the problem outlined <a href="http://ai-on.org/projects/photorealistic-3d-scene-postprocessing.html">here</a>. We used the 32-bit version of <a href="http://deeplearning.net/software/theano/install_ubuntu.html">Theano</a> with <a href="https://github.com/sklearn-theano/sklearn-theano">sklearn-theano</a> as a wrapper.
  </div>
 </div>
- 
-<div class="centered">
-   <h2>Skills</h2>
-
+</div>
+<div class="container">
+   <h2 style="align:center">Skills</h2>
+</div>
 <div class="container">
 <table cellspacing="4" min-width="440px" style="background-color:#EEEEEE" align="center">
 <tr>
