--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 		<div class="container">
-		<nav style="align:center;left:50%">
+		<nav align="center">
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="/blog">Blog</a></li>
@@ -24,9 +24,9 @@
 
 
 <div class="container">
-  <h2 style="align:center;left:50%">Simple Collapsible</h2>
+  <h2 align="center">Simple Collapsible</h2>
 
-<div style="align:center;left:50%">
+<div align="center">
   <p>Click on the button to toggle between showing and hiding content.</p>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Austin Capobianco</button>
   <div id="static">The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</div>
@@ -48,7 +48,7 @@
 </div>
 </div>
 <div class="container">
-   <h2 style="align:center">Skills</h2>
+   <h2 align="center">Skills</h2>
 </div>
 <div class="container">
 <table cellspacing="4" min-width="440px" style="background-color:#EEEEEE" align="center">
