--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
 
 		<div class="container">
-		<nav align="center">
+		<div align="center">
+		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="/blog">Blog</a></li>
@@ -21,6 +22,7 @@
     		</ul>
 		</nav>
 		</div>
+		</div>
 
 
 <div class="container">
@@ -28,21 +30,21 @@
 
 <div align="center">
   <p>Click on the button to toggle between showing and hiding content.</p>
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Austin Capobianco</button>
-  <div id="static">The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</div>
-  <div id="demo" class="collapse">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo" align="left">Austin Capobianco</button>
+  <div id="static" align="left">The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</div>
+  <div id="demo" class="collapse" align="left">
   I graduated from UNC Chapel Hill with a dual major in Psychology and Chemistry. I have no formal training in programming or data science so I'm hoping this portfolio along with an interview will convince you to hire me. For what it's worth, I have traveled the world extensively due to various fortuitous circumstances. I am willing to relocate or work remotely.
   </div>
 
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost">Latest Post</button>
-  <div id="static">Cleanliness is Next to Godliness</div>
-  <div id="latestpost" class="collapse">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" align="left">Latest Post</button>
+  <div id="static" align="left">Cleanliness is Next to Godliness</div>
+  <div id="latestpost" class="collapse" align="left">
   We've all heard that data science is "the sexiest job" of the 21st century. But it's not all easy money and sex. For most, the least cool part about data science is data cleaning AKA data wrangling AKA data munging. This is the bread and butter of most data science projects and is actually something I know a fair amount about. I'll share some common techniques from this Kaggle project I worked on.
   </div>
 
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj">Current Project</button>
-  <div id="static">Image Enhancement Using a GAN</div>
-  <div id="latestproj" class="collapse">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" align="left">Current Project</button>
+  <div id="static" align="left">Image Enhancement Using a GAN</div>
+  <div id="latestproj" class="collapse" align="left">
   You know how in that silly show CSI the officers can digitally enhanced any picture? It used to be fiction but thanks to the magic of Generative Adversarial Networks that's no longer the case. I joined a couple of data scientists to tackle the problem outlined <a href="http://ai-on.org/projects/photorealistic-3d-scene-postprocessing.html">here</a>. We used the 32-bit version of <a href="http://deeplearning.net/software/theano/install_ubuntu.html">Theano</a> with <a href="https://github.com/sklearn-theano/sklearn-theano">sklearn-theano</a> as a wrapper.
  </div>
 </div>
