--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <p>Click on the button to toggle between showing and hiding content.</p>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo" align="left">Austin Capobianco</button>
   <div class="container">
-  <div id="static" align="left" margin-left="55%">The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</div>
+  <div id="static" align="left" style="margin-left:55%;">The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</div>
   <div id="demo" class="collapse" align="left" margin-left="55%">
   I graduated from UNC Chapel Hill with a dual major in Psychology and Chemistry. I have no formal training in programming or data science so I'm hoping this portfolio along with an interview will convince you to hire me. For what it's worth, I have traveled the world extensively due to various fortuitous circumstances. I am willing to relocate or work remotely.
   </div>
