--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
   <p>Click on the button to toggle between showing and hiding content.</p>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo" align="left">Austin Capobianco</button>
   <div class="container">
-  <div id="static" align="left" style="margin-left:55%;">The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</div>
-  <div id="demo" class="collapse" align="left" margin-left="55%">
+  <div id="static" align="left" style="margin-left:25%;">The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</div>
+  <div id="demo" class="collapse" align="left" style="margin-left:25%;">
   I graduated from UNC Chapel Hill with a dual major in Psychology and Chemistry. I have no formal training in programming or data science so I'm hoping this portfolio along with an interview will convince you to hire me. For what it's worth, I have traveled the world extensively due to various fortuitous circumstances. I am willing to relocate or work remotely.
   </div>
   </div>
 
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" align="left">Latest Post</button>
-  <div id="static" align="left">Cleanliness is Next to Godliness</div>
-  <div id="latestpost" class="collapse" align="left">
+  <div id="static" align="left" style="margin-left:25%;">Cleanliness is Next to Godliness</div>
+  <div id="latestpost" class="collapse" align="left" style="margin-left:25%;">
   We've all heard that data science is "the sexiest job" of the 21st century. But it's not all easy money and sex. For most, the least cool part about data science is data cleaning AKA data wrangling AKA data munging. This is the bread and butter of most data science projects and is actually something I know a fair amount about. I'll share some common techniques from this Kaggle project I worked on.
   </div>
 
