--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div align="center">
   <p>Click on the button to toggle between showing and hiding content.</p>
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo" align="left">Austin Capobianco</button>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo" align="left">The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</button>
   <div class="container" align="center">
   <div id="static" align="left" >The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</div>
   <div id="demo" class="collapse" align="left" style="margin-left:10%;">
