--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    	 <title>Austin Capobianco's Data Science Portfolio</title>
-	 <link rel="stylesheet" type="text/css" href="/css/main.css">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
  </head>
 
 <body>
@@ -25,32 +25,38 @@
 		</div>
 
 
-<div class="container">
-  <h2 align="center">Simple Collapsible</h2>
+<div class="big_three" style="margin-left:13%;margin-right:13%;" align="left">
+  <h2 align="center">The Meme Vector</h2>
 
-<div align="center">
-  <p>Click on the button to toggle between showing and hiding content.</p>
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo" align="left">The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</button>
-  <div class="container" align="center">
-  <div id="static" align="left" >The purpose of this website is mainly to show off what I can do in the hope that I'll be able to get a data analysis job.</div>
-  <div id="demo" class="collapse" align="left" style="margin-left:10%;">
-  I graduated from UNC Chapel Hill with a dual major in Psychology and Chemistry. I have no formal training in programming or data science so I'm hoping this portfolio along with an interview will convince you to hire me. For what it's worth, I have traveled the world extensively due to various fortuitous circumstances. I am willing to relocate or work remotely.
+<div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:black !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="max-width:100px;max-height:100px;" /> About me</button>
+  <div class="info">
+  <div id="intro" class="collapse" style="margin-left:0%;">
+  I graduated from UNC Chapel Hill with a dual major in Psychology and Chemistry. I have no formal training in programming or data science so I'm hoping this portfolio along with an interview will convince you to hire me. For what it's worth, I have traveled the world extensively due to various fortuitous circumstances. I am willing to relocate or work remotely. The purpose of this site is to provide evidence that I will be well-suited to a career in data science.
   </div>
   </div>
 
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" align="left">Latest Post</button>
-  <div id="static" align="left" style="margin-left:25%;">Cleanliness is Next to Godliness</div>
-  <div id="latestpost" class="collapse" align="left" style="margin-left:25%;">
+    <hr>
+  <p>Latest Post</p>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost"><img src="http://www.datacleansing.net.au/Images/Site/DG_Data_Cleansing_Cycle_300px.png" border="0" alt="" style="max-width:100px" />Cleanliness is Next to Godliness</button>
+  <div class="info">
+  <div id="latestpost" class="collapse" style="margin-left:0%;">
   We've all heard that data science is "the sexiest job" of the 21st century. But it's not all easy money and sex. For most, the least cool part about data science is data cleaning AKA data wrangling AKA data munging. This is the bread and butter of most data science projects and is actually something I know a fair amount about. I'll share some common techniques from this Kaggle project I worked on.
   </div>
+  </div>
 
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" align="left">Current Project</button>
-  <div id="static" align="left">Image Enhancement Using a GAN</div>
-  <div id="latestproj" class="collapse" align="left">
+   <hr>
+  <p>Current Project</p>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" align="left"><img src="http://image.slidesharecdn.com/dlcvd4l1generativemodelsandaversarialtraining-160803172437/95/deep-learning-for-computer-vision-generative-models-and-adversarial-training-upc-2016-5-638.jpg?cb=1470245137" border="0" alt="" style="max-width:100px" />Image Enhancement Using a GAN</button>
+  <div id="latestproj" class="collapse" style="margin-left:0%;">
   You know how in that silly show CSI the officers can digitally enhanced any picture? It used to be fiction but thanks to the magic of Generative Adversarial Networks that's no longer the case. I joined a couple of data scientists to tackle the problem outlined <a href="http://ai-on.org/projects/photorealistic-3d-scene-postprocessing.html">here</a>. We used the 32-bit version of <a href="http://deeplearning.net/software/theano/install_ubuntu.html">Theano</a> with <a href="https://github.com/sklearn-theano/sklearn-theano">sklearn-theano</a> as a wrapper.
  </div>
+ </div>
+
 </div>
+
 </div>
+
 <div class="container">
    <h2 align="center">Skills</h2>
 </div>
