First blog post
Reddit upvote analysis

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <hr style="height:1px;border:none;color:#333;background-color:#333;" />
   <p>Latest Post</p>
   <div>
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;"><img src="http://www.datacleansing.net.au/Images/Site/DG_Data_Cleansing_Cycle_300px.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Cleanliness is Next to Godliness</button>
+   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Optimizing your upvotes</button>
             <div id="tag_box" style="display:inline-block;padding:5px;">
             <ul>
               <li>Python</li>
@@ -50,7 +50,7 @@
   </div>
   <div class="info">
   <div id="latestpost" class="collapse" style="margin-left:0%;">
-  We've all heard that data science is "the sexiest job" of the 21st century. But it's not all easy money and sex. For most, the least cool part about data science is data cleaning AKA data wrangling AKA data munging. This is the bread and butter of most data science projects and is actually something I know a fair amount about. I'll share some common techniques from this Kaggle project I worked on.
+  Kaggle provided an 8GB dataset that was composed of the May 2015 comments on Reddit. To me the best use of this data was extracting information that would help me to maximize upvotes in the future. After determining how the data was structured, I figured a simple place to start was determining which subreddits you're most likely to get upvotes in. Then I wanted to play with some text analysis, so I figured out which specific words were most likely to result in downvotes.
   </div>
   </div>
 
