--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <link rel='stylesheet prefetch' href='http:////netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css'>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/contact.css">
  </head>
 
 <body style="background:#EEEEEE;">
@@ -27,71 +27,52 @@
 
 <hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
-
 <div class="big_three" style="margin-left:13%;margin-right:13%;" align="left">
 
-  <h1 align="center">Austin Capobianco</h1>
+  <h1 align="center">Contact</h1>
 
-  <div style="display:inline-flex;">
-   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> About this site</button></div>
-          <div id="tag_box" style="margin:auto 5px;padding:5px;">
-          This site will have posts documenting my data science training as well as various ideas I try to pursue. Click the button to the left for more detail.
+<div style="display:inline-flex;">
+  <div style="margin:auto;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Who's Austin?</button></div>
+            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+
+            <p>Click the button to the left for more info about me, or just email me at: <a href="mailto:austin.capobianco@gmail.com">austin.capobianco@gmail.com</a> </p>
             </div>
-  </div>
+</div>
 
   <div class="info">
   <div id="intro" class="collapse" style="margin-left:0%;">
-  Placeholder
-  </div>
-  </div>
-
- 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
-
-  <p>Latest Post</p>
-  <div style="display:inline-flex;">
-   <div style="margin:auto;">
-   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Optimizing your upvotes</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
-            <ul>
-              <li>Python</li>
-              <li>Data munging</li>
-              <li>Pandas</li>
-            </ul>
-        </div>
-  </div>
-        
-  <div class="info">
-  <div id="latestpost" class="collapse" style="margin-left:0%;">
-  Kaggle provided an 8GB dataset that was composed of the May 2015 comments on Reddit. To me the best use of this data was extracting information that would help me to maximize upvotes in the future. After determining how the data was structured, I figured a simple place to start was determining which subreddits you're most likely to get upvotes in. Then I wanted to play with some text analysis, so I figured out which specific words were most likely to result in downvotes.
+  I graduated from UNC Chapel Hill with a dual major in Psychology and Chemistry. Soon after I began trading bitcoin and eventually I made enough to travel for years. However, my money is quickly running out and I'm now seeking a career in data science. I have no formal training in programming or data science so I'm hoping this portfolio along with an interview will convince you to hire me. For what it's worth, I have traveled the world extensively due to various fortuitous circumstances. I am willing to relocate or work remotely. The purpose of this site is to provide evidence that I will be well-suited to a career in data science. I'm currently based in Winston-Salem, NC but I'm able to leave whenever.
   </div>
   </div>
 
 <hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
-  <p>Current Project</p>
   <div style="display:inline-flex;">
    <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://image.slidesharecdn.com/dlcvd4l1generativemodelsandaversarialtraining-160803172437/95/deep-learning-for-computer-vision-generative-models-and-adversarial-training-upc-2016-5-638.jpg?cb=1470245137" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;"/> Image Enhancement Using a GAN</button></div>
+   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Web presence</button></div>
             <div id="tag_box" style="margin:auto 5px;padding:5px;">
-            <ul>
-              <li>Deep learning</li>
-              <li>Image processing</li>
-              <li>Generative adversarial networks</li>
-            </ul>
+             Feel free to investigate me on your own terms. Click the button to the left for access to my profiles on a variety of sites.
             </div>
   </div>
-  
-  <div id="info">
-  <div id="latestproj" class="collapse" style="margin-left:0%;">
-  You know how in that silly show CSI the officers can digitally enhanced any picture? It used to be fiction but thanks to the magic of Generative Adversarial Networks that's no longer the case. I joined a couple of data scientists to tackle the problem outlined <a href="http://ai-on.org/projects/photorealistic-3d-scene-postprocessing.html">here</a>. We used the 32-bit version of <a href="http://deeplearning.net/software/theano/install_ubuntu.html">Theano</a> with <a href="https://github.com/sklearn-theano/sklearn-theano">sklearn-theano</a> as a wrapper.
- </div>
- </div>
- </div>
+
+  <div class="info">
+  <div id="latestpost" class="collapse" style="margin-left:0%;">
+  <div align="left">
+  <ul class="social-icons list-unstyled list-inline"> 
+        <li style="color:#3355EE;font-size:20px;"> <a href="https://reddit.com/u/The_Data_Guy"><i class="fa fa-reddit"></i></a></li>   
+        <li style="color:#3355EE;font-size:20px;"> <a href="https://www.facebook.com/austin.capobianco.9"><i class="fa fa-facebook"></i></a></li>  
+        <li style="color:#3355EE;font-size:20px;"> <a href="https://www.linkedin.com/in/austincapobianco"><i class="fa fa-linkedin"></i></a></li>
+        <li style="color:#3355EE;font-size:20px;"> <a href="https://plus.google.com/u/0/106792204416719365033"><i class="fa fa-google-plus"></i></a></li> 
+      </ul>
+  </div>
+  </div>
+  </div>
+
+</div>
 
 <hr style="height:1px;border:none;color:#333;background-color:#333;" />
- 
+
 <div class="container">
    <h2 align="center">Skills</h2>
 </div>
@@ -113,6 +94,10 @@
 
  </table>
  </div>
+
+
+
+
 
 <hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
