--- a/projects/index.html
+++ b/projects/index.html
@@ -7,7 +7,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    <link rel='stylesheet prefetch' href='http:////netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css'>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
  </head>
 
 <body style="background:#EEEEEE;">
@@ -24,21 +24,17 @@
 		</nav>
 		</div>
 		</div>
-
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
-
+    <hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
 <div class="big_three" style="margin-left:13%;margin-right:13%;" align="left">
-
-  <h1 align="center">Austin Capobianco</h1>
-
-  <div style="display:inline-flex;">
-   <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> About this site</button></div>
-          <div id="tag_box" style="margin:auto 5px;padding:5px;">
-          This site will have posts documenting my data science training as well as various ideas I try to pursue. Click the button to the left for more detail.
+  <h1 align="center">Projects</h1>
+<div style="display:inline-flex;">
+  <div style="margin:auto;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> About this page</button></div>
+            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+              This page is for keeping track of the larger scale projects I'm working on. There will be links to other pages github is incapable of hosting here.
             </div>
-  </div>
+</div>
 
   <div class="info">
   <div id="intro" class="collapse" style="margin-left:0%;">
@@ -46,33 +42,12 @@
   </div>
   </div>
 
- 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
-
-  <p>Latest Post</p>
-  <div style="display:inline-flex;">
-   <div style="margin:auto;">
-   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Optimizing your upvotes</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
-            <ul>
-              <li>Python</li>
-              <li>Data munging</li>
-              <li>Pandas</li>
-            </ul>
-        </div>
-  </div>
-        
-  <div class="info">
-  <div id="latestpost" class="collapse" style="margin-left:0%;">
-  Kaggle provided an 8GB dataset that was composed of the May 2015 comments on Reddit. To me the best use of this data was extracting information that would help me to maximize upvotes in the future. After determining how the data was structured, I figured a simple place to start was determining which subreddits you're most likely to get upvotes in. Then I wanted to play with some text analysis, so I figured out which specific words were most likely to result in downvotes.
-  </div>
-  </div>
-
 <hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
   <p>Current Project</p>
+
   <div style="display:inline-flex;">
-   <div style="margin:auto;">
+  <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://image.slidesharecdn.com/dlcvd4l1generativemodelsandaversarialtraining-160803172437/95/deep-learning-for-computer-vision-generative-models-and-adversarial-training-upc-2016-5-638.jpg?cb=1470245137" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;"/> Image Enhancement Using a GAN</button></div>
             <div id="tag_box" style="margin:auto 5px;padding:5px;">
             <ul>
@@ -82,19 +57,43 @@
             </ul>
             </div>
   </div>
-  
+
   <div id="info">
   <div id="latestproj" class="collapse" style="margin-left:0%;">
   You know how in that silly show CSI the officers can digitally enhanced any picture? It used to be fiction but thanks to the magic of Generative Adversarial Networks that's no longer the case. I joined a couple of data scientists to tackle the problem outlined <a href="http://ai-on.org/projects/photorealistic-3d-scene-postprocessing.html">here</a>. We used the 32-bit version of <a href="http://deeplearning.net/software/theano/install_ubuntu.html">Theano</a> with <a href="https://github.com/sklearn-theano/sklearn-theano">sklearn-theano</a> as a wrapper.
  </div>
  </div>
+
+<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+  <p>Other Projects</p>
+  <div style="display:inline-flex;">
+  <div style="margin:auto;">
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#personanexus" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://www.drodd.com/images14/p25.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;"/> Personanexus</button></div>
+            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+            <ul>
+              <li>PHP</li>
+              <li>Mongo</li>
+              <li>MySQL</li>
+            </ul>
+            </div>
+   </div>
+
+  <div id="info">
+  <div id="personanexus" class="collapse" style="margin-left:0%;">
+  <a href="#">Link to Personanexus site.</a>
+  <p>The ultimate goal of Personanexus is to create parallels between all the different ways to categorize people and personalities. Check out the adjacent pic courtesy of Cracked. The ninja turtle Leonardo is the leader of his group. He's even-tempered and ambitious. This "leader-of-4" trope is seen everywhere from Scooby Doo to Seinfeld to real-life groups like The Beatles to the 4 temperaments of Hippocrates. Personanexus takes this a step further by enabling comparisons to be drawn between different "persona groups" with dissimilar numbers of "personas." It's fun to put people into boxes. From astrology to personality psychology to 'which Sex &amp; the City character are you?' type quizzes, a certain segment of the population has always been drawn this.</p>
  </div>
+ </div>
+
+</div>
 
 <hr style="height:1px;border:none;color:#333;background-color:#333;" />
  
 <div class="container">
    <h2 align="center">Skills</h2>
 </div>
+
 <div class="container">
 <table cellspacing="4" min-width="440px" style="background-color:#EEEEEE" align="center">
 <tr>
@@ -115,7 +114,6 @@
  </div>
 
 <hr style="height:1px;border:none;color:#333;background-color:#333;" />
-
 <footer style="width:100%;background:#424242;padding-top:5px;">  
 <div class="container">
   <div align="center">
