--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    -->
-   <link rel='stylesheet prefetch' href='http:////netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css'>
+   <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css'>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
  </head>
 
@@ -118,7 +118,7 @@
 
 <hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
-<footer style="width:100%;background:#424242;padding-top:5px;">  
+<footer style="width:100% !important;background:#424242;padding-top:5px;">  
 <div class="container">
   <div align="center">
   <ul class="social-icons list-unstyled list-inline"> 
