--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    -->
-   <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css'>
+   <link rel='stylesheet prefetch' href='//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css'>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
  </head>
 
@@ -90,9 +90,12 @@
   You know how in that silly show CSI the officers can digitally enhanced any picture? It used to be fiction but thanks to the magic of Generative Adversarial Networks that's no longer the case. I joined a couple of data scientists to tackle the problem outlined <a href="http://ai-on.org/projects/photorealistic-3d-scene-postprocessing.html">here</a>. We used the 32-bit version of <a href="http://deeplearning.net/software/theano/install_ubuntu.html">Theano</a> with <a href="https://github.com/sklearn-theano/sklearn-theano">sklearn-theano</a> as a wrapper.
  </div>
  </div>
- </div>
 
 <hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+ </div>
+
+
  
 <div class="container">
    <h2 align="center">Skills</h2>
@@ -115,8 +118,6 @@
 
  </table>
  </div>
-
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
 <footer style="width:100% !important;background:#424242;padding-top:5px;">  
 <div class="container">
