--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    	 <title>Austin Capobianco Data Analytics</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   <!--
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-   -->
    <link rel='stylesheet prefetch' href='//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css'>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
  </head>
@@ -16,7 +14,7 @@
 
 		<div class="container">
 		<div align="center">
-		<nav>
+		<nav style="margin-top:12px;">
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="/blog">Blog</a></li>
@@ -100,7 +98,7 @@
 <div class="container">
    <h2 align="center">Skills</h2>
 </div>
-<div class="container">
+<div class="container" style="margin-bottom:12px;">
 <table cellspacing="4" min-width="440px" style="background-color:#EEEEEE" align="center">
 <tr>
 <td valign="bottom" style="color:#EEEEEE"></td><td><a href="https://www.python.org/"><img src="https://www.python.org/static/opengraph-icon-200x200.png" border="0" alt="" style="max-width:100px" /></a></td>
@@ -123,7 +121,7 @@
 <div class="container">
   <div align="center">
   <ul class="social-icons list-unstyled list-inline"> 
-       <li style="color:#EEEEEE;font-size:20px;"> <a href="#"><i class="fa fa-share-alt"></i></a> Share: </li> 
+       <li style="color:#EEEEEE;font-size:20px;"><i class="fa fa-share-alt"></i> Share: </li> 
         <li style="color:#3355EE;font-size:20px;"> <a href="https://reddit.com/submit/?url=https%3A%2F%2Faustincap.github.io"><i class="fa fa-reddit"></i></a></li>  
         <li style="color:#3355EE;font-size:20px;"> <a href="mailto:?subject=Normally%20the%20site%20tagline%20would%20go%20here.&amp;body=https%3A%2F%2Faustincap.github.io"><i class="fa fa-envelope"></i></a> </li> 
         <li style="color:#3355EE;font-size:20px;"> <a href="https://twitter.com/intent/tweet/?text=Normally%20the%20site%20tagline%20would%20go%20here.&amp;url=https%3A%2F%2Faustincap.github.io"><i class="fa fa-twitter"></i></a> </li> 
