--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
 
 		<div class="container">
 		<div align="center">
-		<nav>
+		<nav style="margin-top:12px;">
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="/blog">Blog</a></li>
@@ -24,7 +24,8 @@
 		</nav>
 		</div>
 		</div>
-    <hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+<hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
 <div class="big_three" style="margin-left:13%;margin-right:13%;" align="left">
   <h1 align="center">Projects</h1>
@@ -86,9 +87,10 @@
  </div>
  </div>
 
+<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
 </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
  
 <div class="container">
    <h2 align="center">Skills</h2>
@@ -113,12 +115,11 @@
  </table>
  </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
 <footer style="width:100%;background:#424242;padding-top:5px;">  
 <div class="container">
   <div align="center">
   <ul class="social-icons list-unstyled list-inline"> 
-       <li style="color:#EEEEEE;font-size:20px;"> <a href="#"><i class="fa fa-share-alt"></i></a> Share: </li> 
+       <li style="color:#EEEEEE;font-size:20px;"><i class="fa fa-share-alt"></i> Share: </li> 
         <li style="color:#3355EE;font-size:20px;"> <a href="https://reddit.com/submit/?url=https%3A%2F%2Faustincap.github.io"><i class="fa fa-reddit"></i></a></li>  
         <li style="color:#3355EE;font-size:20px;"> <a href="mailto:?subject=Normally%20the%20site%20tagline%20would%20go%20here.&amp;body=https%3A%2F%2Faustincap.github.io"><i class="fa fa-envelope"></i></a> </li> 
         <li style="color:#3355EE;font-size:20px;"> <a href="https://twitter.com/intent/tweet/?text=Normally%20the%20site%20tagline%20would%20go%20here.&amp;url=https%3A%2F%2Faustincap.github.io"><i class="fa fa-twitter"></i></a> </li> 
