--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,12 @@
 
   <div class="info">
   <div id="intro" class="collapse" style="margin-left:0%;">
-  I graduated from UNC Chapel Hill with a dual major in Psychology and Chemistry. Soon after I began trading bitcoin and eventually I made enough to travel for years. However, my money is quickly running out and I'm now seeking a career in data science. I have no formal training in programming or data science so I'm hoping this portfolio along with an interview will convince you to hire me. For what it's worth, I have traveled the world extensively due to various fortuitous circumstances. I am willing to relocate or work remotely. The purpose of this site is to provide evidence that I will be well-suited to a career in data science. I'm currently based in Winston-Salem, NC but I'm able to leave whenever.
+  The data guy of Winston-Salem. Feel free to check out my web presence on these social media sites:   <ul class="social-icons list-unstyled list-inline" > 
+        <li style="color:#3355EE !important;font-size:20px;"> <a href="https://reddit.com/u/The_Data_Guy"><i class="fa fa-reddit"></i></a></li>   
+        <li style="color:#3355EE !important;font-size:20px;"> <a href="https://www.facebook.com/austin.capobianco.9"><i class="fa fa-facebook"></i></a></li>  
+        <li style="color:#3355EE !important;font-size:20px;"> <a href="https://www.linkedin.com/in/austincapobianco"><i class="fa fa-linkedin"></i></a></li>
+        <li style="color:#3355EE !important;font-size:20px;"> <a href="https://plus.google.com/u/0/106792204416719365033"><i class="fa fa-google-plus"></i></a></li> 
+      </ul>
   </div>
   </div>
 
@@ -59,12 +64,7 @@
   <div class="info">
   <div id="latestpost" class="collapse" style="margin-left:0%;">
   <div align="left">
-  <ul class="social-icons list-unstyled list-inline"> 
-        <li style="color:#3355EE;font-size:20px;"> <a href="https://reddit.com/u/The_Data_Guy"><i class="fa fa-reddit"></i></a></li>   
-        <li style="color:#3355EE;font-size:20px;"> <a href="https://www.facebook.com/austin.capobianco.9"><i class="fa fa-facebook"></i></a></li>  
-        <li style="color:#3355EE;font-size:20px;"> <a href="https://www.linkedin.com/in/austincapobianco"><i class="fa fa-linkedin"></i></a></li>
-        <li style="color:#3355EE;font-size:20px;"> <a href="https://plus.google.com/u/0/106792204416719365033"><i class="fa fa-google-plus"></i></a></li> 
-      </ul>
+
   </div>
   </div>
   </div>
