--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <div style="display:inline-flex;">
    <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> About this site</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;width:100%;max-width:320px !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> About this site</button></div>
           <div id="tag_box" style="margin:auto 5px;padding:5px;">
           This site will have posts documenting my data science training as well as various ideas I try to pursue. Click the button to the left for more detail.
             </div>
@@ -52,7 +52,7 @@
   <p>Latest Post</p>
   <div style="display:inline-flex;">
    <div style="margin:auto;">
-   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Optimizing your upvotes</button></div>
+   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;width:100%;max-width:320px !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Optimizing your upvotes</button></div>
             <div id="tag_box" style="margin:auto 5px;padding:5px;">
             <ul>
               <li>Python</li>
