--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
 		</div>
 		</div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+<hr />
 
 
-<div class="big_three" style="margin-left:13%;margin-right:13%;" align="left">
+<div class="big_three" align="left">
 
   <h1 align="center">Austin Capobianco</h1>
 
   <div style="display:inline-flex;">
    <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;width:100%;max-width:320px !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> About this site</button></div>
-          <div id="tag_box" style="margin:auto 5px;padding:5px;">
+          <div id="tag_box">
           This site will have posts documenting my data science training as well as various ideas I try to pursue. Click the button to the left for more detail.
             </div>
   </div>
 
-  <div class="info">
+
   <div id="intro" class="collapse" style="margin-left:0%;">
   Placeholder
   </div>
-  </div>
+
 
  
 <hr style="height:1px;border:none;color:#333;background-color:#333;" />
@@ -53,7 +53,7 @@
   <div style="display:inline-flex;">
    <div style="margin:auto;">
    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;width:100%;max-width:320px !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Optimizing your upvotes</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+            <div id="tag_box">
             <ul>
               <li>Python</li>
               <li>Data munging</li>
@@ -62,13 +62,13 @@
         </div>
   </div>
         
-  <div class="info">
+
   <div id="latestpost" class="collapse" style="margin-left:0%;">
   Kaggle provided an 8GB dataset that was composed of the May 2015 comments on Reddit. To me the best use of this data was extracting information that would help me to maximize upvotes in the future. After determining how the data was structured, I figured a simple place to start was determining which subreddits you're most likely to get upvotes in. Then I wanted to play with some text analysis, so I figured out which specific words were most likely to result in downvotes.
   </div>
-  </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+
+<hr />
 
   <p>Current Project</p>
   <div style="display:inline-flex;">
