--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body style="background:#EEEEEE;">
 
-		<div class="container">
-		<div align="center">
+		<div align="center" style="background:#424242;">
 		<nav style="margin-top:12px;">
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -22,7 +21,6 @@
         		<li><a href="/contact.html">Contact</a></li>
     		</ul>
 		</nav>
-		</div>
 		</div>
 
 <hr />
@@ -52,8 +50,8 @@
   <p>Latest Post</p>
   <div style="display:inline-flex;">
    <div style="margin:auto;">
-   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;width:100%;word-wrap:break-word;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;" /> Optimizing your upvotes</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestpost" style="display:inline-block !important; background-color:#CCC0C0 !important;font-size:200% !important;width:100%;word-wrap:break-word !important;"><img src="https://lh3.googleusercontent.com/J41hsV2swVteoeB8pDhqbQR3H83NrEBFv2q_kYdq1xp9vsI1Gz9A9pzjcwX_JrZpPGsa=w300" border="0" alt="" style="min-width:80px;min-height:80px;max-width:80px;max-height:80px;" /> Optimizing your upvotes</button></div>
+            <div id="tag_box">
             <ul>
               <li>Python</li>
               <li>Data munging</li>
@@ -74,7 +72,7 @@
   <div style="display:inline-flex;">
    <div style="margin:auto;">
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://image.slidesharecdn.com/dlcvd4l1generativemodelsandaversarialtraining-160803172437/95/deep-learning-for-computer-vision-generative-models-and-adversarial-training-upc-2016-5-638.jpg?cb=1470245137" border="0" alt="" style="min-width:100px;min-height:100px;max-width:100px;max-height:100px;"/> Image Enhancement Using a GAN</button></div>
-            <div id="tag_box" style="margin:auto 5px;padding:5px;">
+            <div id="tag_box">
             <ul>
               <li>Deep learning</li>
               <li>Image processing</li>
@@ -89,7 +87,7 @@
  </div>
  </div>
 
-<hr style="height:1px;border:none;color:#333;background-color:#333;" />
+<hr />
 
  </div>
 
