--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="background:#EEEEEE;">
 
 		<div align="center" style="background:#424242;">
-		<nav style="margin-top:12px;">
+		<nav style="padding-top:12px;padding-bottom:12px;">
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="/blog">Blog</a></li>
@@ -23,7 +23,7 @@
 		</nav>
 		</div>
 
-<hr />
+<hr style="margin-top:0px !important;" />
 
 
 <div class="big_three" align="left">
