--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
   <div class="info">
   <div id="intro" class="collapse" style="margin-left:0%;">
   The data guy of Winston-Salem. Feel free to check out my web presence on these social media sites:   <ul class="social-icons list-unstyled list-inline" > 
-        <li style="color:#3355EE !important;font-size:20px;"> <a href="https://reddit.com/u/The_Data_Guy"><i class="fa fa-reddit"></i></a></li>   
+        <li> <a href="https://reddit.com/u/The_Data_Guy" style="color:#3355EE !important;color:#3355EE !important;"><i class="fa fa-reddit"></i></a></li>   
         <li style="color:#3355EE !important;font-size:20px;"> <a href="https://www.facebook.com/austin.capobianco.9"><i class="fa fa-facebook"></i></a></li>  
         <li style="color:#3355EE !important;font-size:20px;"> <a href="https://www.linkedin.com/in/austincapobianco"><i class="fa fa-linkedin"></i></a></li>
         <li style="color:#3355EE !important;font-size:20px;"> <a href="https://plus.google.com/u/0/106792204416719365033"><i class="fa fa-google-plus"></i></a></li> 
