--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div style="display:inline-flex;">
    <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:200% !important;width:100%;word-wrap:break-word;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> About this site</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#intro" align="left" style="background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://www.drodd.com/images15/question-mark11.png" border="0" alt="" class="button_pic"/> About this site</button></div>
           <div id="tag_box">
           This site will have posts documenting my data science training as well as various ideas I try to pursue. Click the button to the left for more detail.
             </div>
@@ -71,7 +71,7 @@
   <p>Current Project</p>
   <div style="display:inline-flex;">
    <div style="margin:auto;">
-  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:200% !important;"><img src="http://image.slidesharecdn.com/dlcvd4l1generativemodelsandaversarialtraining-160803172437/95/deep-learning-for-computer-vision-generative-models-and-adversarial-training-upc-2016-5-638.jpg?cb=1470245137" border="0" alt="" class="button_pic"/> Image Enhancement Using a GAN</button></div>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#latestproj" style="display:inline-block !important; background-color:#C0C0C0 !important;font-size:170% !important;white-space:normal !important;"><img src="http://image.slidesharecdn.com/dlcvd4l1generativemodelsandaversarialtraining-160803172437/95/deep-learning-for-computer-vision-generative-models-and-adversarial-training-upc-2016-5-638.jpg?cb=1470245137" border="0" alt="" class="button_pic"/> Image Enhancement Using a GAN</button></div>
             <div id="tag_box">
             <ul>
               <li>Deep learning</li>
